# ray-tracer

./: CMakeLists.txt  LICENSE  README.md  camera.h  canvas.cpp  canvas.h  main  main.cpp  msaa.h  myprogram  primitive.h  ray_tracing_engine.h  scene.h  sphere.h  vec3.h
examples/: main.cpp
include/: camera.h  material.h  msaa.h  primitive.h  ray_tracing_engine.h  scene.h  sphere.h  triangle.h  vec3.h
objs/: objhandler.py
src/: MeshLoader.cpp  camera.cpp  canvas.cpp  material.cpp  random.h  ray.h  ray_tracing_engine.cpp  scene.cpp  sphere.cpp  triangle.cpp
